resources/observability/grafana-via-openshift.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-devshiftnet-dns
    haproxy.router.openshift.io/timeout: 120s
  # legacy route - same as grafana now
  name: grafana-via-openshift
spec:
  host: grafana.openshift-app-sre.devshift.net
  port:
    targetPort: https
  to:
    kind: Service
    name: grafana
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
